--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme.Launcher">
-        <activity android:name=".SplashActivity">
+        <activity
+                android:name=".SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
@@ -22,14 +23,17 @@
         <activity
                 android:name=".RegisterActivity"
                 android:exported="true"
-                android:label="Register">
+                android:label="Register"
+                android:windowSoftInputMode="stateHidden">
         </activity>
         <activity
                 android:name=".LoginActivity"
                 android:exported="true"
-                android:label="@string/title_activity_login">
+                android:label="@string/title_activity_login"
+                android:windowSoftInputMode="stateHidden">
         </activity>
-        <activity android:name=".MainActivity">
+        <activity
+                android:name=".MainActivity">
 
         </activity>
     </application>
