--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,9 +14,16 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme.Launcher">
         <activity
+                android:name=".AccountActivity"
+                android:label="@string/account"
+                android:theme="@style/AppTheme.Launcher.NoActionBar"
+                android:launchMode="singleTask">
+        </activity>
+        <activity
                 android:name=".HomeActivity"
                 android:label="@string/title_activity_home"
-                android:theme="@style/AppTheme.Launcher.NoActionBar">
+                android:theme="@style/AppTheme.Launcher.NoActionBar"
+                android:launchMode="singleTask">
         </activity>
         <activity android:name=".SplashActivity">
             <intent-filter>
