--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,13 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme.Launcher">
+        <activity android:name=".DeleteAccountActivity"
+                  android:windowSoftInputMode="stateHidden">
+        </activity>
+        <activity
+                android:name=".ChangeDetailsActivity"
+                android:windowSoftInputMode="stateHidden">
+        </activity>
         <activity
                 android:name=".AccountActivity"
                 android:label="@string/account"
