--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          xmlns:tools="http://schemas.android.com/tools" package="com.example.diabetesapp">
+          xmlns:tools="http://schemas.android.com/tools"
+          package="com.example.diabetesapp">
     <!-- To auto-complete the email text field in the login form with the user's emails -->
     <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
     <uses-permission android:name="android.permission.READ_PROFILE"/>
@@ -12,9 +13,15 @@
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
-            android:theme="@style/AppTheme.Launcher" tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".NewMeasurementActivity"
+            android:theme="@style/AppTheme.Launcher"
+            tools:ignore="GoogleAppIndexingWarning">
+        <activity android:name=".Reauthenticate"
+                  android:theme="@style/AppTheme"
                   android:windowSoftInputMode="stateHidden">
+        </activity>
+        <activity
+                android:name=".NewMeasurementActivity"
+                android:windowSoftInputMode="stateHidden">
         </activity>
         <activity
                 android:name=".DeleteAccountActivity"
@@ -54,8 +61,8 @@
                 android:name=".LoginActivity"
                 android:exported="true"
                 android:label="@string/title_activity_login"
-                android:windowSoftInputMode="stateHidden|adjustResize"
-                android:theme="@style/AppTheme">
+                android:theme="@style/AppTheme"
+                android:windowSoftInputMode="stateHidden|adjustResize">
         </activity>
         <activity
                 android:name=".MainActivity"
