--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore:17.1.5'
     implementation 'com.android.support:cardview-v7:27.1.1'
     implementation 'com.android.support:multidex:1.0.3'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.0.1'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.0.1"
 
     // Required -- JUnit 4 framework
     testImplementation 'junit:junit:4.12'
