--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme.Launcher"
             tools:ignore="GoogleAppIndexingWarning">
+        <activity android:name=".MeasurementViewActivity"
+                  android:exported="true">
+        </activity>
         <activity
                 android:name=".MonthViewActivity"
                 android:exported="true"
@@ -34,7 +37,7 @@
                 android:theme="@style/AppTheme.Launcher.NoActionBar">
         </activity>
         <activity
-                android:name=".Reauthenticate"
+                android:name=".ReauthenticateActivity"
                 android:theme="@style/AppTheme"
                 android:windowSoftInputMode="stateHidden">
         </activity>
