--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,14 +9,19 @@
 
     <application
             android:allowBackup="true"
-            android:icon="@drawable/icon2"
+            android:icon="@mipmap/icon"
             android:label="@string/app_name"
-            android:roundIcon="@mipmap/ic_launcher_round"
+            android:roundIcon="@mipmap/icon"
             android:supportsRtl="true"
             android:theme="@style/AppTheme.Launcher"
             tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".MeasurementViewActivity"
-                  android:exported="true">
+        <activity android:name=".ForgotPasswordActivity"
+                  android:theme="@style/AppTheme"
+                  android:windowSoftInputMode="stateHidden">
+        </activity>
+        <activity
+                android:name=".MeasurementViewActivity"
+                android:exported="true">
         </activity>
         <activity
                 android:name=".MonthViewActivity"
